--- a/popup.html
+++ b/popup.html
@@ -45,9 +45,13 @@
                 <button id="save" class="btn btn-success">Save</button>
                 <button id="fill-save" class="btn btn-primary">Fill & Save</button>
             </div>
+            <hr />
+            <div id="messages">
+            </div>
         </form>
         <br />
     </div>
 </body>
+<script src="javascript/bootstrap.min.js"></script>
 <script src="popup.js"></script>
 </html>
