Code refactor and OCR code tesing

--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
                 <label for="password_id">Password Field ID</label>
                 <input required="required" type="text" class="form-control" id="password_id" name="password_id" placeholder="Enter Password Field ID">
                 <label for="password_value">Password Name Field Value</label>
-                <input type="text" class="form-control" id="password_value" name="password_value" placeholder="Enter Passeord Field Value">
+                <input type="password" class="form-control" id="password_value" name="password_value" placeholder="Enter Passeord Field Value">
             </div>
             <hr />
             <div class="form-group">
