--- a/popup.html
+++ b/popup.html
@@ -37,7 +37,7 @@
             <hr />
             <div class="checkbox">
                 <label>
-                    <input type="checkbox"> Auto Submit?
+                    <input type="checkbox" id="is_auto"> Auto Submit?
                 </label>
             </div>
             <hr />
